--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,20 @@
 
 } 
 
+.flex-row {
+    background-color: bisque;
+}
+
+h2 {
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight:bolder;
+}
+
 .forecast {
     display: flex;
     justify-content: space-between;
