--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-.forecastTitle {
-
-} 
-
 .flex-row {
     background-color: bisque;
 }
@@ -13,7 +9,7 @@ h2 {
     margin-block-end: 0.83em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    font-weight:bolder;
+    font-weight: bolder;
 }
 
 .forecast {
@@ -33,4 +29,7 @@ h2 {
     background-color: blue;
     color: antiquewhite;
     padding: 10px 60px;
+    border: black;
+    margin: 5px;
+    border-style: solid;
 }
